force-app/main/default/objects/Account/fields/AbsenteeOwner__c.field-meta.xml
<CustomField>
    <fullName>AbsenteeOwner__c</fullName>
    <label>Absentee Owner</label>
    <length>1</length>
    <type>Text</type>
</CustomField>