force-app/main/default/objects/Account/fields/Account_Payable_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Payable_Contact_Phone__c</fullName>
    <formula>Accounts_Payable_Contact__r.Phone</formula>
    <label>Account Payable Contact Phone</label>
    <type>Text</type>
</CustomField>