force-app/main/default/objects/Account/fields/Account_SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Account_SMS_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>