force-app/main/default/objects/Account/fields/Accounting__c.field-meta.xml
<CustomField>
    <fullName>Accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounting</label>
    <type>Checkbox</type>
</CustomField>