force-app/main/default/objects/Account/fields/AcctFirstName__c.field-meta.xml
<CustomField>
    <fullName>AcctFirstName__c</fullName>
    <formula>FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AcctFirstName</label>
    <type>Text</type>
</CustomField>