force-app/main/default/objects/Account/fields/AcctLastName__c.field-meta.xml
<CustomField>
    <fullName>AcctLastName__c</fullName>
    <formula>LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AcctLastName</label>
    <type>Text</type>
</CustomField>