force-app/main/default/objects/Account/fields/Active_Partner__c.field-meta.xml
<CustomField>
    <fullName>Active_Partner__c</fullName>
    <label>Active Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>