force-app/main/default/objects/Account/fields/Agent_Updated_Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>Agent_Updated_Phone_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Agent had to update phone field from blank value</description>
    <label>Agent Updated Phone Field</label>
    <type>Checkbox</type>
</CustomField>