force-app/main/default/objects/Account/fields/Agent_Updated_Phone_Field_Reason__c.field-meta.xml
<CustomField>
    <fullName>Agent_Updated_Phone_Field_Reason__c</fullName>
    <description>Reasons why Phone had to be updated by Agent</description>
    <label>Agent Updated Phone Field Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Agent_Updated_Phone_Field__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Correct Account (no lookup) Phone field blank</fullName>
            </value>
            <value>
                <fullName>Lead ID unreadable</fullName>
            </value>
            <value>
                <fullName>Lead ID wrong on door tag</fullName>
            </value>
            <value>
                <fullName>Looked up by Lead ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>