force-app/main/default/objects/Account/fields/Alarm_Com__c.field-meta.xml
<CustomField>
    <fullName>Alarm_Com__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alarm.Com</label>
    <type>Checkbox</type>
</CustomField>