force-app/main/default/objects/Account/fields/Alarm_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Alarm_Dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alarm Dealer</label>
    <type>Checkbox</type>
</CustomField>