force-app/main/default/objects/Account/fields/Amount_per_Lead__c.field-meta.xml
<CustomField>
    <fullName>Amount_per_Lead__c</fullName>
    <label>Amount per Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>