force-app/main/default/objects/Account/fields/Answering_Customer_Calls__c.field-meta.xml
<CustomField>
    <fullName>Answering_Customer_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Answering Customer Calls</label>
    <type>Checkbox</type>
</CustomField>