force-app/main/default/objects/Account/fields/Apple_Maps_Address__c.field-meta.xml
<CustomField>
    <fullName>Apple_Maps_Address__c</fullName>
    <formula>HYPERLINK(&apos;http://maps.apple.com/?daddr=&apos;+ BillingStreet +&apos;,&apos;+ BillingCity +&apos;,&apos;+ BillingState +&apos;,&apos;+ BillingPostalCode+&apos;&amp;dirflg=d&apos;, &apos;Apple Maps - Address&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apple Maps - Address</label>
    <type>Text</type>
</CustomField>