force-app/main/default/objects/Account/fields/Apple_Maps_LatLong__c.field-meta.xml
<CustomField>
    <fullName>Apple_Maps_LatLong__c</fullName>
    <formula>HYPERLINK(&apos;http://maps.apple.com/?q=&apos;+TEXT(BillingLatitude)+&apos;,&apos;+TEXT(BillingLongitude)+&apos;&amp;t=r&apos;, &apos;Apple Maps - LatLong&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apple Maps - LatLong</label>
    <type>Text</type>
</CustomField>