force-app/main/default/objects/Account/fields/APS_1__c.field-meta.xml
<CustomField>
    <fullName>APS_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APS #1</label>
    <type>Checkbox</type>
</CustomField>