force-app/main/default/objects/Account/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <description>Used for automation. = Please DO NOT DELETE.</description>
    <formula>If (Phone = Null, Null, MID( Phone ,2, 3) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Code</label>
    <type>Text</type>
</CustomField>