force-app/main/default/objects/Account/fields/Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Area_Name__c</fullName>
    <label>Area Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AZ-Phoenix_East</fullName>
            </value>
            <value>
                <fullName>AZ-Phoenix_West</fullName>
            </value>
            <value>
                <fullName>AZ-Phoenix_North</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>