force-app/main/default/objects/Account/fields/Average_Upfront_Price_Of_A_Customer_Tran__c.field-meta.xml
<CustomField>
    <fullName>Average_Upfront_Price_Of_A_Customer_Tran__c</fullName>
    <label>Price Of A Customer Transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>