force-app/main/default/objects/Account/fields/AZROC_License__c.field-meta.xml
<CustomField>
    <fullName>AZROC_License__c</fullName>
    <label>AZROC License</label>
    <length>16</length>
    <type>Text</type>
</CustomField>