force-app/main/default/objects/Account/fields/Bill_And_Process_In_House_Customers__c.field-meta.xml
<CustomField>
    <fullName>Bill_And_Process_In_House_Customers__c</fullName>
    <label>Bill And Process - In-House Customers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>