force-app/main/default/objects/Account/fields/Billing_Address_Same_As_Product__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Same_As_Product__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Billing Address Same As Product Address.</label>
    <type>Checkbox</type>
</CustomField>