force-app/main/default/objects/Account/fields/Billing_Company__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company__c</fullName>
    <label>Billing Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>