force-app/main/default/objects/Account/fields/Billing_Company_Service__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company_Service__c</fullName>
    <label>Billing Company.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>