force-app/main/default/objects/Account/fields/Billing_Cost_Per_Customer__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cost_Per_Customer__c</fullName>
    <label>Billing Cost Per Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>