force-app/main/default/objects/Account/fields/Billing_Email_Service__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email_Service__c</fullName>
    <label>Billing Email.</label>
    <type>Email</type>
</CustomField>