force-app/main/default/objects/Account/fields/Billing_Fax_Service__c.field-meta.xml
<CustomField>
    <fullName>Billing_Fax_Service__c</fullName>
    <label>Billing Fax.</label>
    <type>Phone</type>
</CustomField>