force-app/main/default/objects/Account/fields/Billing_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_First_Name__c</fullName>
    <label>Billing First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>