force-app/main/default/objects/Account/fields/Billing_Geocode_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Billing_Geocode_Accuracy__c</fullName>
    <formula>TEXT( BillingGeocodeAccuracy  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Geocode Accuracy</label>
    <type>Text</type>
</CustomField>