force-app/main/default/objects/Account/fields/Billing_Information_From__c.field-meta.xml
<CustomField>
    <fullName>Billing_Information_From__c</fullName>
    <label>Billing Information From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client 1</fullName>
                <default>true</default>
                <label>Client 1</label>
            </value>
            <value>
                <fullName>Client 2</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>