force-app/main/default/objects/Account/fields/Billing_Phone_Service__c.field-meta.xml
<CustomField>
    <fullName>Billing_Phone_Service__c</fullName>
    <label>Billing Phone.</label>
    <type>Phone</type>
</CustomField>