force-app/main/default/objects/Account/fields/BMPS__c.field-meta.xml
<CustomField>
    <fullName>BMPS__c</fullName>
    <label>BMPS</label>
    <length>11</length>
    <type>Text</type>
</CustomField>