force-app/main/default/objects/Account/fields/Boberdoo_Active__c.field-meta.xml
<CustomField>
    <fullName>Boberdoo_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to verify Active Clients In Boberdoo</description>
    <label>Boberdoo Active</label>
    <type>Checkbox</type>
</CustomField>