force-app/main/default/objects/Account/fields/Boberdoo_Delivery_Email__c.field-meta.xml
<CustomField>
    <fullName>Boberdoo_Delivery_Email__c</fullName>
    <label>Boberdoo Delivery Email</label>
    <type>Email</type>
</CustomField>