force-app/main/default/objects/Account/fields/BoberdooID__c.field-meta.xml
<CustomField>
    <fullName>BoberdooID__c</fullName>
    <label>BoberdooID</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>