force-app/main/default/objects/Account/fields/Building_Default_Indiciator__c.field-meta.xml
<CustomField>
    <fullName>Building_Default_Indiciator__c</fullName>
    <label>Building Default Indiciator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>