force-app/main/default/objects/Account/fields/Call__c.field-meta.xml
<CustomField>
    <fullName>Call__c</fullName>
    <description>This fields having picklist values</description>
    <label>Verbal Consent Call</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level1</fullName>
            </value>
            <value>
                <fullName>Level2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>