force-app/main/default/objects/Account/fields/Call_Information__c.field-meta.xml
<CustomField>
    <fullName>Call_Information__c</fullName>
    <description>The opportunity they last called in on. This is used to store the name of the business if it needs to be forwarded after the call.</description>
    <label>Call Information</label>
    <type>TextArea</type>
</CustomField>