force-app/main/default/objects/Account/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <description>Used by Bright Pattern to hold DID Type variable during a live call.</description>
    <label>Call Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>