force-app/main/default/objects/Account/fields/CallerID__c.field-meta.xml
<CustomField>
    <fullName>CallerID__c</fullName>
    <description>This will be the DID for the call</description>
    <label>CallerID</label>
    <type>Phone</type>
</CustomField>