force-app/main/default/objects/Account/fields/Cameras__c.field-meta.xml
<CustomField>
    <fullName>Cameras__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cameras</label>
    <type>Checkbox</type>
</CustomField>