force-app/main/default/objects/Account/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>