force-app/main/default/objects/Account/fields/canvasser_assigned__c.field-meta.xml
<CustomField>
    <fullName>canvasser_assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canvasser Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_Canvasser_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>