force-app/main/default/objects/Account/fields/Canvasser_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Canvasser_Disposition__c</fullName>
    <label>Canvasser Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Moved In</fullName>
            </value>
            <value>
                <fullName>Not Home</fullName>
            </value>
            <value>
                <fullName>Consent Y</fullName>
            </value>
            <value>
                <fullName>Consent N</fullName>
            </value>
            <value>
                <fullName>Gated Community</fullName>
            </value>
            <value>
                <fullName>Can&apos;t Find</fullName>
            </value>
            <value>
                <fullName>Renter</fullName>
            </value>
            <value>
                <fullName>Lease back</fullName>
            </value>
            <value>
                <fullName>Card Sent</fullName>
            </value>
            <value>
                <fullName>DT Left</fullName>
            </value>
            <value>
                <fullName>Duplicate Tag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>