force-app/main/default/objects/Account/fields/Canvasser_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Canvasser_Geolocation__c</fullName>
    <label>Canvasser Geolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>