force-app/main/default/objects/Account/fields/Canvasser_Notes__c.field-meta.xml
<CustomField>
    <fullName>Canvasser_Notes__c</fullName>
    <label>Canvasser Notes</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>