force-app/main/default/objects/Account/fields/Canvasser_SMS__c.field-meta.xml
<CustomField>
    <fullName>Canvasser_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canvasser SMS</label>
    <type>Checkbox</type>
</CustomField>