force-app/main/default/objects/Account/fields/Capital_Needs__c.field-meta.xml
<CustomField>
    <fullName>Capital_Needs__c</fullName>
    <label>Capital Needs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A) Sell Accounts, Retire Or Liquidate</fullName>
            </value>
            <value>
                <fullName>B) Finance An Acquisition</fullName>
            </value>
            <value>
                <fullName>C) Consolidate Debt</fullName>
            </value>
            <value>
                <fullName>D) Expand Business Growth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>