force-app/main/default/objects/Account/fields/Capital_Source__c.field-meta.xml
<CustomField>
    <fullName>Capital_Source__c</fullName>
    <label>Capital Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sell Your Accounts</fullName>
            </value>
            <value>
                <fullName>Debt Financing (Bank Loan)</fullName>
            </value>
            <value>
                <fullName>Self Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>