force-app/main/default/objects/Account/fields/Capital_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Capital_Source_Details__c</fullName>
    <label>Capital Source - Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>