force-app/main/default/objects/Account/fields/Carpet_Tile_Cleaning_Status__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Tile_Cleaning_Status__c</fullName>
    <label>Carpet &amp; Tile Cleaning Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>