force-app/main/default/objects/Account/fields/Carrier_Route__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Route__c</fullName>
    <label>Carrier Route</label>
    <length>255</length>
    <type>Text</type>
</CustomField>