force-app/main/default/objects/Account/fields/CBSA__c.field-meta.xml
<CustomField>
    <fullName>CBSA__c</fullName>
    <label>CBSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>