force-app/main/default/objects/Account/fields/Central_Station_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Central_Station_Monitoring__c</fullName>
    <label>Central Station Monitoring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>