force-app/main/default/objects/Account/fields/Cloudingo_Address_Validated__c.field-meta.xml
<CustomField>
    <fullName>Cloudingo_Address_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once Cloudingo validates the addresses this field will be updated automatically on the Salesforce Object Page Layout showing that the address validation is complete.</description>
    <inlineHelpText>Once Cloudingo validates the addresses this field will be updated automatically on the Salesforce Object Page Layout showing that the address validation is complete.</inlineHelpText>
    <label>Cloudingo Address Validated</label>
    <type>Checkbox</type>
</CustomField>