force-app/main/default/objects/Account/fields/Collections__c.field-meta.xml
<CustomField>
    <fullName>Collections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collections</label>
    <type>Checkbox</type>
</CustomField>