force-app/main/default/objects/Account/fields/Commercial_Percent__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Percent__c</fullName>
    <label>Commercial Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>