force-app/main/default/objects/Account/fields/Confirmation_NUM__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_NUM__c</fullName>
    <label>Confirmation #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>