force-app/main/default/objects/Account/fields/Consent_By_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Consent_By_Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consent By Personnel</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Accounts (Consent By Personnel)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>