force-app/main/default/objects/Account/fields/Consent_Captured_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Captured_Date__c</fullName>
    <description>The date that the consent was captured.</description>
    <inlineHelpText>The date that the consent was captured.</inlineHelpText>
    <label>Consent Captured Date</label>
    <type>Date</type>
</CustomField>