force-app/main/default/objects/Account/fields/Consent_Created_by__c.field-meta.xml
<CustomField>
    <fullName>Consent_Created_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Capturing the user who updated the verbal consent from null to not null</description>
    <label>Consent Created by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>