force-app/main/default/objects/Account/fields/Consent_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Consent_Opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Opt-out</label>
    <type>Checkbox</type>
</CustomField>