force-app/main/default/objects/Account/fields/Consent_Opt_Out_by__c.field-meta.xml
<CustomField>
    <fullName>Consent_Opt_Out_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consent Opt-Out by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>