force-app/main/default/objects/Account/fields/Consent_Opt_out_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Opt_out_Date__c</fullName>
    <label>Consent Opt-out</label>
    <type>DateTime</type>
</CustomField>