force-app/main/default/objects/Account/fields/Consent_Source__c.field-meta.xml
<CustomField>
    <fullName>Consent_Source__c</fullName>
    <label>Consent Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canvasser</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Inbound 5000</fullName>
            </value>
            <value>
                <fullName>Inbound 5050</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>