force-app/main/default/objects/Account/fields/Consent_Type__c.field-meta.xml
<CustomField>
    <fullName>Consent_Type__c</fullName>
    <label>Consent Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Verbal &amp; Web</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Canvass</fullName>
            </value>
            <value>
                <fullName>IB Agents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>