force-app/main/default/objects/Account/fields/Cost_A_Month__c.field-meta.xml
<CustomField>
    <fullName>Cost_A_Month__c</fullName>
    <label>Cost A Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>