force-app/main/default/objects/Account/fields/Cost_Basic_Interactive_Services__c.field-meta.xml
<CustomField>
    <fullName>Cost_Basic_Interactive_Services__c</fullName>
    <label>Cost - Basic Interactive Services</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under $5.50</fullName>
            </value>
            <value>
                <fullName>$5.51 To $6.50</fullName>
            </value>
            <value>
                <fullName>$6.51 To $8.00</fullName>
            </value>
            <value>
                <fullName>$8+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>