force-app/main/default/objects/Account/fields/County_Lookup__c.field-meta.xml
<CustomField>
    <fullName>County_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County Lookup</label>
    <referenceTo>County__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>