force-app/main/default/objects/Account/fields/CPL_Destination_Number__c.field-meta.xml
<CustomField>
    <fullName>CPL_Destination_Number__c</fullName>
    <description>Used to store the transfer number which changes each time a call is received.</description>
    <label>CPL Destination Number</label>
    <type>Phone</type>
</CustomField>