force-app/main/default/objects/Account/fields/Cross_Streets__c.field-meta.xml
<CustomField>
    <fullName>Cross_Streets__c</fullName>
    <label>Cross Streets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>